# probeklausur

./: CMakeLists.txt  CMakePresets.json  README.md
praxis/: CMakeLists.txt
praxis/aufgaben/: CMakeLists.txt
praxis/aufgaben/aufgabe1/: aufgabe1.cpp  aufgabe1.h  aufgabe1_tests.cpp
praxis/aufgaben/aufgabe2/: aufgabe2.cpp  aufgabe2.h  aufgabe2_tests.cpp
praxis/aufgaben/aufgabe3/: aufgabe3.cpp  aufgabe3.h  aufgabe3_tests.cpp
praxis/aufgaben/aufgabe4/: aufgabe4.cpp  aufgabe4.h  aufgabe4_tests.cpp
praxis/aufgaben/aufgabe5/: aufgabe5.cpp  aufgabe5.h  aufgabe5_tests.cpp
praxis/aufgaben/aufgabe6/: aufgabe6.cpp  aufgabe6.h  aufgabe6_tests.cpp
praxis/aufgaben/leaders/: leaders.cpp  leaders.h  leaders_tests.cpp
praxis/aufgaben/missingnumber/: CMakeLists.txt  missingnumber.cpp  missingnumber.h  missingnumber_tests.cpp
praxis/aufgaben/perfectsum/: perfectsum.cpp  perfectsum.h  perfectsum_tests.cpp
theorie/: .teit24a_inf2_probe_1_klausur.autosave.xopp  teit24a_inf2_probe_1_klausur.xopp
